// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SelectSortBy should render 1`] = `
<ul
  className="nav"
  role={null}
>
  <li
    className="dropdown"
    style={undefined}
  >
    <a
      aria-expanded={false}
      aria-haspopup={true}
      className="dropdown-toggle"
      href="#"
      id={42}
      onClick={[Function]}
      onKeyDown={[Function]}
      role="button"
    >
      Id
       
      <span
        className="caret"
      />
    </a>
    <ul
      aria-labelledby={42}
      className="dropdown-menu"
      role="menu"
    >
      <li
        className=""
        role="presentation"
        style={undefined}
      >
        <a
          href="#"
          id={undefined}
          onClick={[Function]}
          onKeyDown={[Function]}
          role="menuitem"
          tabIndex="-1"
        >
          Id
        </a>
      </li>
      <li
        className=""
        role="presentation"
        style={undefined}
      >
        <a
          href="#"
          id={undefined}
          onClick={[Function]}
          onKeyDown={[Function]}
          role="menuitem"
          tabIndex="-1"
        >
          Name
        </a>
      </li>
    </ul>
  </li>
  <li
    className=""
    role="presentation"
    style={undefined}
  >
    <a
      href="#"
      id={undefined}
      onClick={[Function]}
      role="button"
    >
      Ascending
    </a>
  </li>
</ul>
`;

exports[`SelectSortBy should render id if provided 1`] = `
<ul
  className="nav"
  role={null}
>
  <li
    className="dropdown"
    style={undefined}
  >
    <a
      aria-expanded={false}
      aria-haspopup={true}
      className="dropdown-toggle"
      href="#"
      id="toolbar-sort-by"
      onClick={[Function]}
      onKeyDown={[Function]}
      role="button"
    >
      Id
       
      <span
        className="caret"
      />
    </a>
    <ul
      aria-labelledby="toolbar-sort-by"
      className="dropdown-menu"
      role="menu"
    >
      <li
        className=""
        role="presentation"
        style={undefined}
      >
        <a
          href="#"
          id="toolbar-sort-by-item-id"
          onClick={[Function]}
          onKeyDown={[Function]}
          role="menuitem"
          tabIndex="-1"
        >
          Id
        </a>
      </li>
      <li
        className=""
        role="presentation"
        style={undefined}
      >
        <a
          href="#"
          id="toolbar-sort-by-item-name"
          onClick={[Function]}
          onKeyDown={[Function]}
          role="menuitem"
          tabIndex="-1"
        >
          Name
        </a>
      </li>
    </ul>
  </li>
  <li
    className=""
    role="presentation"
    style={undefined}
  >
    <a
      href="#"
      id="toolbar-sort-order"
      onClick={[Function]}
      role="button"
    >
      Ascending
    </a>
  </li>
</ul>
`;

exports[`SelectSortBy should render with no dropdown 1`] = `
<ul
  className="nav"
  role={null}
>
  <li
    active={undefined}
    activeHref={undefined}
    activeKey={undefined}
    className="navbar-text"
    onSelect={null}
  >
    Id
  </li>
  <li
    className=""
    role="presentation"
    style={undefined}
  >
    <a
      href="#"
      id={undefined}
      onClick={[Function]}
      onKeyDown={[Function]}
      role="button"
    >
      Ascending
    </a>
  </li>
</ul>
`;

exports[`SelectSortBy should render without field selected 1`] = `
<ul
  className="nav"
  role={null}
>
  <li
    className="dropdown"
    style={undefined}
  >
    <a
      aria-expanded={false}
      aria-haspopup={true}
      className="dropdown-toggle"
      href="#"
      id={42}
      onClick={[Function]}
      onKeyDown={[Function]}
      role="button"
    >
      N.C
       
      <span
        className="caret"
      />
    </a>
    <ul
      aria-labelledby={42}
      className="dropdown-menu"
      role="menu"
    >
      <li
        className=""
        role="presentation"
        style={undefined}
      >
        <a
          href="#"
          id={undefined}
          onClick={[Function]}
          onKeyDown={[Function]}
          role="menuitem"
          tabIndex="-1"
        >
          Id
        </a>
      </li>
      <li
        className=""
        role="presentation"
        style={undefined}
      >
        <a
          href="#"
          id={undefined}
          onClick={[Function]}
          onKeyDown={[Function]}
          role="menuitem"
          tabIndex="-1"
        >
          Name
        </a>
      </li>
    </ul>
  </li>
</ul>
`;
